# Module_Context

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
docs/: module_context_framework_knowledge.docx
examples/: CMakeLists.txt
examples/task_flow/: CMakeLists.txt  common.cpp  common.h  master_runner.cpp  master_runner.h  master_sim.cpp  run_task_flow_e2e.ps1  run_task_flow_master.ps1  run_task_flow_worker.ps1  worker_sim.cpp
examples/task_flow/field_deploy/: README.md
examples/task_flow/field_deploy/config/: TaskFlowFieldConfig.psd1
examples/task_flow/field_deploy/scripts/: Install-MasterPrereqs.ps1  Install-WorkerPrereqs.ps1  Start-MasterTest.ps1  Start-RabbitMq.ps1  Start-Worker.ps1  Stop-TestEnv.ps1  Stop-Worker.ps1  TaskFlowFieldConfig.ps1
examples/task_flow_qt_master_demo/: CMakeLists.txt  README.md  bmpframesource.cpp  bmpframesource.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  masterworker.cpp  masterworker.h  rabbitmqadminclient.cpp  rabbitmqadminclient.h  taskflowdemotypes.h
include/module_context/framework/: Export.h  IContext.h  IModule.h  IModuleManager.h  ModuleState.h
include/module_context/http/: IHttpTransferService.h  Types.h
include/module_context/messaging/: IMessageBusService.h  Types.h
include/module_context/plugin/: IPluginManagerService.h  ModuleFactory.h  Types.h
modules/: CMakeLists.txt
modules/amqp_bus/: CMakeLists.txt
modules/amqp_bus/src/: AmqpBusModule.cpp  AmqpBusModule.h
modules/amqp_bus/src/internal/: AmqpBusConfig.h  AmqpConnectionDriver.cpp  DriverOps.h  MessageBusServiceProxy.cpp  MessageBusServiceProxy.h  SharedState.h
modules/http_transport/: CMakeLists.txt
modules/http_transport/src/: HttpTransportModule.cpp  HttpTransportModule.h
modules/rabbitmq_bus/: CMakeLists.txt
modules/rabbitmq_bus/src/: RabbitMqBusModule.cpp  RabbitMqBusModule.h
modules/rabbitmq_bus/src/internal/: ConfigTypes.h  DriverOps.h  MessageBusServiceProxy.cpp  MessageBusServiceProxy.h  SharedState.h
modules/semiplugin_manager/: CMakeLists.txt
modules/semiplugin_manager/src/: SemipluginManagerModule.cpp  SemipluginManagerModule.h
modules/semiplugin_manager/src/internal/: ConfigTypes.h  PluginLoader.cpp  PluginLoader.h  PluginRegistry.cpp  PluginRegistry.h
scripts/: import_cpp_httplib.ps1  package_task_flow_field_deploy.ps1
scripts/ecs/: Initialize-EcsEncoding.ps1  Install-CMakeForWindows.ps1  Install-GitForWindows.ps1  Install-PowerShell7ForWindows.ps1  Start-RabbitMqTestEnv.ps1  Sync-BuildTestFromGit.ps1  Test-WindowsBuildEnv.ps1  bootstrap-ecs-from-mac.sh  push-and-verify.sh  run-remote-pwsh.sh
src/framework/: Context.cpp  Context.h  ModuleBase.cpp  ModuleBase.h  ModuleManager.cpp  ModuleManager.h  ServiceRegistry.cpp  ServiceRegistry.h
src/plugin/: ModuleFactory.h
tests/: CMakeLists.txt  amqp_bus_module_test.cpp  amqp_bus_plugin_integration_test.cpp  http_transport_module_test.cpp  http_transport_plugin_integration_test.cpp  module_base_lifecycle_test.cpp  module_manager_config_test.cpp  module_manager_config_test_plugin.cpp  rabbitmq_bus_module_test.cpp  rabbitmq_bus_plugin_integration_test.cpp  semiplugin_manager_plugin_integration_test.cpp  semiplugin_manager_unit_test.cpp
